Fix dark mode code styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -134,7 +134,7 @@ strong {
    @apply prose-ol:ml-0 prose-ol:list-inside prose-ol:list-decimal prose-ol:p-0 prose-li:m-0 prose-li:p-0;
    @apply prose-blockquote:border-l-2 prose-blockquote:border-stone-200 prose-blockquote:dark:border-stone-600/30;
    @apply prose-headings:mb-0 prose-headings:mt-5 prose-headings:font-lora prose-h2:text-[1.25em] prose-h3:text-[1.125em] prose-h4:text-[1.0625em] prose-h5:text-[1.03125em] prose-h6:text-[1em];
-   @apply prose-code:rounded-lg prose-code:bg-stone-200 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)];
+   @apply prose-code:rounded-lg prose-code:bg-stone-200 prose-code:px-1 prose-code:py-0.5 prose-code:text-[calc(1em-1px)] prose-code:dark:bg-stone-600/30;
 }
 
 code {
